commonfiles/iptables.txt
# Generated by iptables-save v1.4.7 on Fri Jun 14 00:22:33 2013
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i tun0 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m tcp ! --tcp-flags SYN,RST,ACK SYN -j REJECT --reject-with tcp-reset 
-A INPUT -m state --state INVALID -j DROP 
-A INPUT -s 143.96.0.0/16 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 203.97.27.126/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -j DROP 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -p tcp -m tcp ! --tcp-flags SYN,RST,ACK SYN -j REJECT --reject-with tcp-reset 
-A OUTPUT -m state --state INVALID -j DROP 
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 123 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT 
-A OUTPUT -o tun0 -p tcp -m tcp --dport 25 -j ACCEPT 
-A OUTPUT -o tun0 -p tcp -m tcp --dport 8140 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 50443 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 50443 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 67 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT 
-A OUTPUT -j LOG --log-prefix "OUT " --log-uid 
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A OUTPUT -j DROP 
COMMIT
# Completed on Fri Jun 14 00:22:33 2013
